# pico-eXamples

./: README.md
0-template/: CMakeLists.txt  do
1-hello_uart/: CMakeLists.txt  do  hello_uart.c
10-oled/: CMakeLists.txt  do
11-bmp280_i2c/: CMakeLists.txt  bmp280_i2c.c  bst-bmp280-ds001.html  do
12-bmp280_temp_i2c/: CMakeLists.txt  bmp280_temp_i2c.c  do
13-bmp280_temp_on_oled/: CMakeLists.txt  bmp280_temp_on_oled.c  do  ssd1306_font.h
14-oled_fun/: CMakeLists.txt  do  oled_fun.c  oled_fun26x32.h  ssd1306_font.h
2-hello_world/: CMakeLists.txt  do  hello_world.c
3-blink_pico_led/: CMakeLists.txt  blink_pico_led.c  do
4-i2c_scan/: CMakeLists.txt  do  i2c_scan.c
5-i2c_slave/: CMakeLists.txt  do  i2c_slave.c
6-i2c_slave_master/: CMakeLists.txt  do  my_program.c
7-i2c_master/: CMakeLists.txt  do  i2c_master.c
8-hey_wifi/: CMakeLists.txt  do  hey_wifi.c  lwipopts.h
9-wifi_client/: CMakeLists.txt  do
